tests/syntax_tests/data/parsing/errors/other/dict_spread.res
let x = dict{...foo, "bar": 3}

